@@ -1,11 +1,16 @@
 package com.nutrymaco.orm.query.select;
 
 import com.nutrymaco.orm.config.ConfigurationOwner;
+import com.nutrymaco.orm.migration.TableSyncManager;
+import com.nutrymaco.orm.query.Database;
+import com.nutrymaco.orm.query.Query;
 import com.nutrymaco.orm.query.condition.Condition;
+import com.nutrymaco.orm.query.insert.InsertQueryBuilder;
 import com.nutrymaco.orm.schema.Schema;
 import com.nutrymaco.orm.schema.lang.Entity;
 
 import java.util.List;
+import java.util.logging.Logger;
 import java.util.stream.Collectors;
 
 
@@ -14,8 +19,12 @@ import java.util.stream.Collectors;
  */
 public class SelectQueryBuilder {
     private final static String KEYSPACE = ConfigurationOwner.getConfiguration().keyspace();
+    private final static boolean TRY_TO_SYNC_TABLES = ConfigurationOwner.getConfiguration().accessToDB();
+    private final static Database database = ConfigurationOwner.getConfiguration().database();
+    private final static Logger logger = Logger.getLogger(SelectQueryBuilder.class.getSimpleName());
     private final static Schema schema = Schema.getInstance();
 
+    private final TableSyncManager tableSyncManager = TableSyncManager.getInstance();
     private final Entity entity;
     private final List<Condition> condition;
 
@@ -38,17 +47,19 @@ public class SelectQueryBuilder {
                 new SelectQueryContext(entity, condition)
         );
 
-        var query =
-                String.format("SELECT * FROM %s.%s WHERE %s", KEYSPACE,
-                        table.name(),
-                        condition.stream().map(Condition::getCql).collect(Collectors.joining(" and "))
-                );
+        if (!TRY_TO_SYNC_TABLES || tableSyncManager.isSync(table)) {
+            logger.info("select from table : %s".formatted(table.name()));
+            return "SELECT * FROM %s.%s WHERE %s"
+                    .formatted(KEYSPACE, table.name(), getStringCondition(condition));
+        }
 
-        return query;
+        var nearestTable = tableSyncManager.getNearestTable(table);
+        logger.info("table : %s not sync so query by nearest table : %s".formatted(table.name(), nearestTable.name()));
+        return "SELECT * FROM %s.%s WHERE %s ALLOW FILTERING"
+                .formatted(KEYSPACE, nearestTable.name(), getStringCondition(condition));
     }
 
-    private static String getColumnName(String name) {
-        return name.replace(".", "_").toLowerCase();
+    private static String getStringCondition(List<Condition> conditions) {
+        return conditions.stream().map(Condition::getCql).collect(Collectors.joining(" and "));
     }
-
 }
